<resources>
    <string name="app_name">number-system-converter</string>
    <string name="button_clear">clear</string>
    <string name="decimal_allowed_digits">0123456789</string>
    <string name="octa_allowed_digits">01234567</string>
    <string name="hexadecimal_allowed_digits">0123456789abc-def</string>
    <string name="binary_allowed_digits">01</string>
    <string name="decimal_name">Decimal</string>
    <string name="octal_name">Octal</string>
    <string name="hexadecimal_name">HexaDecimal</string>
    <string name="binary_name">Binary</string>
</resources>