<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:paddingEnd="20dp"
    android:paddingStart="@dimen/parent_layout_padding_start"
    android:background="@drawable/background"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="100dp"
    >


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/decimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing"
        android:digits="@string/decimal_allowed_digits"
        android:inputType="number"
        android:minHeight="@dimen/minimum_text_height"
        android:background="@drawable/numbers_background"
        />
    <EditText
        android:id="@+id/octal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:digits="@string/octa_allowed_digits"
        android:layout_marginBottom="@dimen/spacing"
        android:minHeight="@dimen/minimum_text_height"
        android:background="@drawable/numbers_background"

        />
    <EditText
        android:id="@+id/hexadecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="@string/hexadecimal_allowed_digits"
        android:layout_marginBottom="@dimen/spacing"
        android:minHeight="@dimen/minimum_text_height"
        android:background="@drawable/numbers_background"
        />

    <EditText
        android:id="@+id/binary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="@string/binary_allowed_digits"
        android:inputType="number"
        android:minHeight="@dimen/minimum_text_height"
        android:background="@drawable/numbers_background"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_clear"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:layout_marginHorizontal="@dimen/clear_horizontal_margin"
        android:paddingVertical="@dimen/clear_button_vertical_padding"
        android:background="@drawable/numbers_background"
        />



</LinearLayout>


</ScrollView>